# TacoBot

./: .coverage  .coveragerc  .dockerignore  .editorconfig  .gitignore  .swagger-sync.yaml  .swagger.v1 copy.yaml  .swagger.v1.backup.yaml  .swagger.v1.yaml  .swagger.yaml  Dockerfile  README.md  app.manifest  changelog.txt  generate_docs.py  main.py  pyproject.toml  swagger-sync.example.yaml  test_coverage.txt  test_coverage_colored.txt  test_coverage_final.txt  test_coverage_fixed.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md
.github/env/: super-linter.env  super-linter.fix.env
.github/linters/: .ecrc  .hadolint.yaml  .isort.cfg  .jscpd.json  .markdown-lint.yml  .python-black  .python-lint  .swagger-sync.yaml  .swaggersync.yaml  eslint.config.mjs  trivy.yaml  zizmor.yaml
.github/workflows/: lint.yaml  pr-target-branch.yml  publish-beta.yml  publish-main.yml  swagger-sync.yml
bot/: TacoBotClient.py  tacobot.py
bot/cogs/: _amazon_links.py  _cbsuggestions.py  _init.py  _leave_survey.py  _lfg.py  _loader.py  account_link.py  announcements.py  assistant.py  birthday.py  cbsuggestions.py  command_sync.py  events.py  food_photo.py  free_games.py  game_keys.py  giphy.py  guild_track.py  help.py  httphandler.py  init.py  introduction.py  invite_tracker.py  join_leave.py  leave_survey.py  live_now.py  mental_monday.py  message_preview.py  message_track.py  minecraft.py  mod_events.py  move_message.py  new_account_check.py  photo_post.py  pokemon.py  poll.py  restricted.py  server_event.py  streamteam.py  suggestions.py  (+13 more)
bot/lib/: ChannelSelect.py  GameRewardView.py  RoleSelectView.py  UrlShortener.py  YesOrNoView.py  colors.py  discordhelper.py  logger.py  messaging.py  permissions.py  settings.py  users_utils.py  utils.py
bot/tacobot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
bot/ui/: ExternalUrlButtonView.py  GameRewardView.py  MultipleExternalUrlButtonView.py  free_game_url_button_view.py
docs/: README.md  openapi-inheritance.md  swagger_openapi_exclude_fix.md  swagger_optional_union_implementation.md  swagger_sync_phase2_type_system.md  swagger_union_nullable_complete.md  swagger_union_oneof.md  swagger_union_support_summary.md
docs/cogs/: README.md  _amazon_links.md  _leave_survey.md  _lfg.md  account_link.md  announcements.md  assistant.md  birthday.md  command_sync.md  events.md  free_games.md  game_keys.md  giphy.md  guild_track.md  help.md  httphandler.md  index.md  introduction.md  invite_tracker.md  join_leave.md  live_now.md  mental_monday.md  message_preview.md  message_track.md  minecraft.md  mod_events.md  move_message.md  new_account_check.md  photo_post.md  restricted.md  roles.md  rules.md  selfroles.md  server_event.md  starboard.md  streamteam.md  suggestions.md  taco_tuesday.md  tacopost.md  tacos.md  (+13 more)
docs/commands/: README.md  _link.md  birthday.md  changelog.md  gif.md  link.md  minecraft.md  move.md  new-account.md  suggest.md
docs/databases/: README.md  announcements.md  ark_users.md  birthday_checks.md  birthdays.md  commands_usage.md  first_message.md  free_game_keys.md  game_key_offers.md  game_keys.md  guilds.md  index.md  introductions.md  invite_codes.md  live_activity.md  live_tracked.md  logs.md  mentalmondays.md  messages.md  migration_runs.md  minecraft_ping.md  (+27 more)
httpserver/: EndpointDecorators.py  UriRoute.py  __init__.py  http_util.py  server.py
languages/: en-us.json  manifest.json
metrics/: README.md  config.py  exporter.py  tacobot.py
nodered/: minecraft-api.json  minecraft-stats-exporter.json  ourtacobot.json  shift-codes.json
notreportsdir/: tmp.json
scripts/: SUGGESTIONS.md  analyze_refactoring.py  bootstrap-linux.sh  bootstrap-macos.sh  bootstrap.ps1  do_refactoring.py  swagger_sync.py  sync_endpoints.py
setup/: requirements.txt
tests/: __init__.py  demo_tags_extraction.py  test_announcements.py  test_colors.py  test_decorator_parser.py  test_decorator_parser_literal.py  test_decorator_parser_options.py  test_decorator_parser_union.py  test_endpoint_collector_http_method.py  test_endpoint_collector_integration.py  test_guild_item_id_batch_request_body.py  test_guild_item_name_batch_request_body.py  test_guild_messages_reactions_api.py  test_guild_resolver.py  test_join_whitelist_api.py  test_merge_utils.py  test_minecraft_player_webhook_handler.py  test_minecraft_player_webhook_handler_helpers.py  test_offer_message_formatter.py  test_offer_url_enricher.py  test_openapi_example_decorator.py  test_openapi_example_on_classes.py  test_openapi_response_union.py  test_phase4_integration.py  test_response_method_filtering.py  test_shift_code_webhook_handler.py  test_shift_code_webhook_handler_helpers.py  test_swagger_integration_examples.py  test_swagger_merge_examples.py  test_swagger_sync_badge_cli.py  test_swagger_sync_badge_generation.py  test_swagger_sync_cobertura.py  test_swagger_sync_cobertura_properties.py  test_swagger_sync_collect.py  test_swagger_sync_component_only_update.py  test_swagger_sync_config.py  test_swagger_sync_coverage_markdown_helpers.py  test_swagger_sync_deprecated_exclude.py  test_swagger_sync_dict_inheritance.py  test_swagger_sync_dict_schema.py  (+41 more)
webhook/: listener.py
(+307 files in other folders)
