[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tacobot"
version = "0.0.0"
description = "TacoBot application (Discord bot + HTTP API)"
authors = [
  { name = "TacoBot Maintainers" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10,<3.14"
# Converted from setup/requirements.txt using compatible specifiers
# Original lines with ~= translated to an explicit lower/upper bound range.
# Commented-out packages in requirements are omitted.

dependencies = [
  "aiohttp>=3.12.15,<3.13.0",
  "discord.py==2.6.3",
  "discordhealthcheck>=0.1.1,<0.2.0",
  "mcstatus>=12.0.5,<12.1.0",
  "openai>=2.0.1,<2.1.0",
  "prometheus-client>=0.23.1,<0.24.0",
  "pymongo==4.15.2",
  "python-dotenv==1.1.1",
  "pytz>=2025.2,<2026.0",
  "pyyaml>=6.0,<7.0",
  "requests>=2.32.5,<2.33.0",
  "validators>=0.35.0,<0.36.0",
]

[project.optional-dependencies]
# Development / testing toolchain (install via: pip install -e .[dev])
dev = [
  "pytest>=8.0.0,<9.0.0",
  "pytest-asyncio>=0.23.0,<0.24.0",
  "pytest-cov>=4.1.0,<5.0.0",
  "mypy>=1.10.0,<2.0.0",
  "ruff>=0.6.0,<0.7.0",
  "black>=24.3.0,<25.0.0",
  "types-requests",
  "types-PyYAML",
]

[tool.setuptools.packages.find]
where = ["bot"]
include = ["bot*"]

[tool.tacobot]
# Custom section for documentation about environment management.
# To create and activate the virtual environment:
#   python -m venv .venv
#   (Windows PowerShell) .venv\\Scripts\\Activate.ps1
#   pip install -e .
# Or to use the legacy requirements file directly:
#   pip install -r setup/requirements.txt

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
source = ["bot"]
omit = [
  "bot/**/__main__.py",
  "bot/**/migrations/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
  "pragma: no cover",
  "if __name__ == '__main__':",
]

[tool.ruff]
line-length = 120
target-version = "py310"
src = ["bot", "tests"]

[tool.black]
line-length = 120
target-version = ["py310"]
